--- a/index.html
+++ b/index.html
@@ -20,16 +20,56 @@
 
   <script>
     const words = [
-      { dutch: "eten", english: "to eat" },
-      { dutch: "huis", english: "house" },
-      { dutch: "vriend", english: "friend" },
-      { dutch: "werken", english: "to work" },
-      { dutch: "fiets", english: "bicycle" },
-      { dutch: "drinken", english: "to drink" },
-      { dutch: "wonen", english: "to live" },
-      { dutch: "slapen", english: "to sleep" },
-      { dutch: "school", english: "school" },
-      { dutch: "dokter", english: "doctor" }
+    { dutch: "aan", english: "on" },
+    { dutch: "aanbieden", english: "to offer" },
+    { dutch: "de aanbieding", english: "offer" },
+    { dutch: "aandoen", english: "to put on" },
+    { dutch: "aangifte doen", english: "to report (a crime)" },
+    { dutch: "aanhebben", english: "to have on" },
+    { dutch: "aankomen", english: "to arrive" },
+    { dutch: "aantrekkelijk", english: "attractive" },
+    { dutch: "de aardappel", english: "potato" },
+    { dutch: "het abonnement", english: "subscription" },
+    { dutch: "het accent", english: "accent" },
+    { dutch: "de accountant", english: "accountant" },
+    { dutch: "achter", english: "behind" },
+    { dutch: "de achternaam", english: "surname" },
+    { dutch: "het adres", english: "address" },
+    { dutch: "afbreken", english: "to break" },
+    { dutch: "afgaan", english: "to go down" },
+    { dutch: "afgelopen", english: "past / last few" },
+    { dutch: "afrekenen", english: "to pay / settle the bill" },
+    { dutch: "afscheid nemen", english: "to say goodbye" },
+    { dutch: "afsnijden", english: "to cut off" },
+    { dutch: "de afspraak", english: "date / appointment" },
+    { dutch: "afspreken", english: "to set a date / make an appointment" },
+    { dutch: "de agenda", english: "diary" },
+    { dutch: "ah", english: "ah" },
+    { dutch: "al", english: "already" },
+    { dutch: "al lang", english: "for a long time" },
+    { dutch: "allebei", english: "both" },
+    { dutch: "alleen", english: "only" },
+    { dutch: "allemaal", english: "everyone" },
+    { dutch: "allergisch", english: "allergic" },
+    { dutch: "allerlei", english: "all kinds of" },
+    { dutch: "alles", english: "everything" },
+    { dutch: "als", english: "as / if" },
+    { dutch: "alsjeblieft", english: "please" },
+    { dutch: "alstublieft", english: "please" },
+    { dutch: "altijd", english: "always" },
+    { dutch: "alvast", english: "in the meantime" },
+    { dutch: "ander(e)", english: "other" },
+    { dutch: "anders", english: "otherwise / different" },
+    { dutch: "anders nog iets", english: "anything else" },
+    { dutch: "de andijvie", english: "endive" },
+    { dutch: "het antwoord", english: "answer" },
+    { dutch: "de apotheek", english: "pharmacy" },
+    { dutch: "het appartement", english: "apartment" },
+    { dutch: "de arm", english: "arm" },
+    { dutch: "de auto", english: "car" },
+    { dutch: "de automaat", english: "vending machine" },
+    { dutch: "de avond", english: "evening" },
+    { dutch: "het avondeten", english: "dinner / evening meal" },
     ];
 
     let currentIndex = 0;
